<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_change"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/button_change" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/button_history"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/button_history" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/imei" />

                <EditText
                    android:id="@+id/editTextIMEI"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/telephone" />

                <EditText
                    android:id="@+id/editTextTelephone"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/imsi" />

                <EditText
                    android:id="@+id/editTextImsi"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/mac" />

                <EditText
                    android:id="@+id/editTextMAC"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/phoneName" />

                <EditText
                    android:id="@+id/editTextPhoneName"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/android_id" />

                <EditText
                    android:id="@+id/editTextandroidId"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/phoneFWH" />

                <EditText
                    android:id="@+id/editTextPhoneFWH"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/HVGA" />

                <EditText
                    android:id="@+id/editTextHVGA"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/wifiSSID" />

                <EditText
                    android:id="@+id/editTextWifiSSID"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/wifiBSSID" />

                <EditText
                    android:id="@+id/editTextWifiBSSID"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/simICCID" />

                <EditText
                    android:id="@+id/editTextSimICCID"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/simStatus" />

                <EditText
                    android:id="@+id/editTextSimStatus"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/DNOId" />

                <EditText
                    android:id="@+id/editTextDNOId"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/simCountry" />

                <EditText
                    android:id="@+id/editTextSimCountry"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/DNOName" />

                <EditText
                    android:id="@+id/editTextDNOName"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>